<resources>
    <string name="app_name">Plant App - UI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Homepage -->
    <string name="home_hi">Hi There!</string>
    <string name="home_search">Search</string>
    <string name="home_recommend">Recommend</string>
    <string name="home_more">More</string>
    <string name="home_feature_plants">Feature Plants</string>

    <!-- Product Detail -->
    <string name="product_detail_buy_now">Buy Now</string>
    <string name="product_detail_desc">Description</string>


    <!-- Bottom Navbar Title -->
    <string name="home">Homepage</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
</resources>