<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLTop"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/main_bg">

                <ImageView
                    android:id="@+id/homeImgMenuIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"/>

                <TextView
                    android:id="@+id/homeTxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/homeImgMenuIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/home_hi"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="32sp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/homeCardViewProfile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:layout_constraintTop_toBottomOf="@id/homeImgMenuIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="20dp"
                    android:padding="20dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    >
                    <ImageView
                        android:id="@+id/homeImgProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/profile_photo"/>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/homeEditSearch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/constraintLTop"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/edittext_bg"
                android:layout_marginTop="-25dp"
                android:hint="@string/home_search"
                android:textColor="@color/font_color_1"
                android:drawableRight="@drawable/search"
                android:paddingHorizontal="20dp"
                android:elevation="20dp"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrainLRecommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/homeEditSearch"
                android:layout_marginVertical="36dp"
                android:layout_marginHorizontal="24dp">

                <TextView
                    android:id="@+id/homeRecommendedTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/homeRecommendedRecyclerView"
                    android:text="@string/home_recommend"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    />

                <Button
                    android:id="@+id/homeBtnMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/home_more"
                    android:textSize="16sp"
                    style="@style/customButton"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/homeRecommendedRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/homeBtnMore"
                    android:orientation="horizontal"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrainLFeature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/homeEditSearch"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="24dp">

                <TextView
                    android:id="@+id/homeFeatureTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/homeFeatureRecyclerView"
                    android:text="@string/home_feature_plants"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    />

                <Button
                    android:id="@+id/homeFeatureBtnMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/home_more"
                    android:textSize="16sp"
                    style="@style/customButton"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/homeFeatureRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/homeFeatureBtnMore"
                    android:orientation="horizontal"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>